# ZuberiChat

./: .env.example  .gitignore  CCODE-HANDOFF.md  MVP_ASSESSMENT.md  README.md  REPO_MAP.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  veritas-kanban-tree.txt  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
apps/veritas-kanban/: .dockerignore  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REVIEW_108_109.md  SECURITY-AUDIT.md  SECURITY.md  SQUAD_CHAT_IMPLEMENTATION.md  TEST_FAILURES_REPORT.md  deploy-to-ceg.sh  docker-compose-demo.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  seed-demo-data.sh  vitest.config.ts
apps/veritas-kanban/.devcontainer/: devcontainer.json
apps/veritas-kanban/cli/: package.json
docs/: Openclaw-flow.html  Openclaw-flow2.html  Openclaw-flow3.html  build-run-matrix.md  e2e-verification-checklist.md  log-guide.md  stack-map.md  topology-decision.md
scripts/: build-release.ps1  capture-window.ps1  diagnose.ts  functional-test-040.ps1  generate-version.ps1  install.ps1  publish-release.ps1  update-local.ps1  verify-build.ps1
services/clawdbot-feishu/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  main.rs
src/hooks/: useUpdater.ts  useVersionPoller.ts  useWebSocket.ts
src/lib/: ollama.ts  permissionPolicy.ts  platform.ts  syntaxTheme.ts
src/services/: usageTracker.ts
src/test/: README.md  copy-button.test.tsx  markdown-render.test.tsx  permissions.test.tsx  smoke.test.tsx
src/types/: message.ts  permissions.ts
(+656 files in other folders)
