[package]
name = "zuberichat"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-process = "2.3.1"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2.4.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
